<resources>
    <string name="app_name">AndroidAcademy</string>
    <string name="tv_story_line_description_film">After the devastating events of Avengers: Infinity War, the universe is in ruins. With the help of remaining allies, the Avengers assemble once more in order to reverse Thanos\' actions and restore balance to the universe.</string>
    <string name="storyline">Storyline</string>
    <string name="reviews">125 Reviews</string>
    <string name="genre">Action, Adventure, Fantasy</string>
    <string name="name_movie">Avengers:\nEnd Game</string>
    <string name="name_movie2">Avengers:End Game</string>
    <string name="rating">13+</string>
    <string name="back">    Back</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cast">Cast</string>
    <string name="robert_downey_jr">Robert Downey Jr.</string>
    <string name="chris_evans">Chris Evans</string>
    <string name="mark_ruffalo">Mark Ruffalo</string>
    <string name="chris_hemsworth">Chris Hemsworth</string>
    <string name="movie_list">Movie list</string>
    <string name="text_movie_list">Movie list</string>
    <string name="duration_movie">137 min</string>
</resources>